src/binding/petsc4py/src/petsc4py/PETSc/petscvec.pxi

# --------------------------------------------------------------------

cdef extern from * nogil:

    ctypedef const char* PetscVecType "VecType"
    PetscVecType VECSEQ
    PetscVecType VECMPI
    PetscVecType VECSTANDARD
    PetscVecType VECSHARED
    PetscVecType VECSEQVIENNACL
    PetscVecType VECMPIVIENNACL
    PetscVecType VECVIENNACL
    PetscVecType VECSEQCUDA
    PetscVecType VECMPICUDA
    PetscVecType VECCUDA
    PetscVecType VECSEQHIP
    PetscVecType VECMPIHIP
    PetscVecType VECHIP
    PetscVecType VECNEST
    PetscVecType VECSEQKOKKOS
    PetscVecType VECMPIKOKKOS
    PetscVecType VECKOKKOS

    ctypedef enum PetscVecOption "VecOption":
        VEC_IGNORE_OFF_PROC_ENTRIES
        VEC_IGNORE_NEGATIVE_INDICES

    PetscErrorCode VecView(PetscVec,PetscViewer)
    PetscErrorCode VecDestroy(PetscVec*)
    PetscErrorCode VecCreate(MPI_Comm,PetscVec*)

    PetscErrorCode VecSetOptionsPrefix(PetscVec,char[])
    PetscErrorCode VecAppendOptionsPrefix(PetscVec,char[])
    PetscErrorCode VecGetOptionsPrefix(PetscVec,char*[])
    PetscErrorCode VecSetFromOptions(PetscVec)
    PetscErrorCode VecSetUp(PetscVec)

    PetscErrorCode VecCreateSeq(MPI_Comm,PetscInt,PetscVec*)
    PetscErrorCode VecCreateSeqWithArray(MPI_Comm,PetscInt,PetscInt,PetscScalar[],PetscVec*)
    PetscErrorCode VecCreateSeqCUDAWithArrays(MPI_Comm,PetscInt,PetscInt,PetscScalar[],PetscScalar[],PetscVec*)
    PetscErrorCode VecCreateSeqHIPWithArrays(MPI_Comm,PetscInt,PetscInt,PetscScalar[],PetscScalar[],PetscVec*)
    PetscErrorCode VecCreateSeqViennaCLWithArrays(MPI_Comm,PetscInt,PetscInt,PetscScalar[],PetscScalar[],PetscVec*)
    PetscErrorCode VecCreateMPI(MPI_Comm,PetscInt,PetscInt,PetscVec*)
    PetscErrorCode VecCreateMPIWithArray(MPI_Comm,PetscInt,PetscInt,PetscInt,PetscScalar[],PetscVec*)
    PetscErrorCode VecCreateMPICUDAWithArrays(MPI_Comm,PetscInt,PetscInt,PetscInt,PetscScalar[],PetscScalar[],PetscVec*)
    PetscErrorCode VecCreateMPIHIPWithArrays(MPI_Comm,PetscInt,PetscInt,PetscInt,PetscScalar[],PetscScalar[],PetscVec*)
    PetscErrorCode VecCreateMPIViennaCLWithArrays(MPI_Comm,PetscInt,PetscInt,PetscInt,PetscScalar[],PetscScalar[],PetscVec*)
    PetscErrorCode VecCreateGhost(MPI_Comm,PetscInt,PetscInt,PetscInt,PetscInt[],PetscVec*)
    PetscErrorCode VecCreateGhostWithArray(MPI_Comm,PetscInt,PetscInt,PetscInt,PetscInt[],PetscScalar[],PetscVec*)
    PetscErrorCode VecCreateGhostBlock(MPI_Comm,PetscInt,PetscInt,PetscInt,PetscInt,PetscInt[],PetscVec*)
    PetscErrorCode VecCreateGhostBlockWithArray(MPI_Comm,PetscInt,PetscInt,PetscInt,PetscInt,PetscInt[],PetscScalar[],PetscVec*)
    PetscErrorCode VecCreateShared(MPI_Comm,PetscInt,PetscInt,PetscVec*)
    PetscErrorCode VecCreateNest(MPI_Comm,PetscInt,PetscIS[],PetscVec[],PetscVec*)
    PetscErrorCode VecGetType(PetscVec,PetscVecType*)
    PetscErrorCode VecSetType(PetscVec,PetscVecType)
    PetscErrorCode VecSetOption(PetscVec,PetscVecOption,PetscBool)
    PetscErrorCode VecSetSizes(PetscVec,PetscInt,PetscInt)
    PetscErrorCode VecGetSize(PetscVec,PetscInt*)
    PetscErrorCode VecGetLocalSize(PetscVec,PetscInt*)
    PetscErrorCode VecSetBlockSize(PetscVec,PetscInt)
    PetscErrorCode VecGetBlockSize(PetscVec,PetscInt*)
    PetscErrorCode VecGetOwnershipRange(PetscVec,PetscInt*,PetscInt*)
    PetscErrorCode VecGetOwnershipRanges(PetscVec,const PetscInt*[])

    PetscErrorCode VecCreateLocalVector(PetscVec,PetscVec*)
    PetscErrorCode VecGetLocalVector(PetscVec,PetscVec)
    PetscErrorCode VecRestoreLocalVector(PetscVec,PetscVec)
    PetscErrorCode VecGetLocalVectorRead(PetscVec,PetscVec)
    PetscErrorCode VecRestoreLocalVectorRead(PetscVec,PetscVec)

    PetscErrorCode VecGetArrayWrite(PetscVec,PetscScalar*[])
    PetscErrorCode VecRestoreArrayWrite(PetscVec,PetscScalar*[])
    PetscErrorCode VecGetArrayRead(PetscVec,const PetscScalar*[])
    PetscErrorCode VecRestoreArrayRead(PetscVec,const PetscScalar*[])
    PetscErrorCode VecGetArray(PetscVec,PetscScalar*[])
    PetscErrorCode VecRestoreArray(PetscVec,PetscScalar*[])
    PetscErrorCode VecPlaceArray(PetscVec,PetscScalar[])
    PetscErrorCode VecResetArray(PetscVec)
    PetscErrorCode VecGetArrayWriteAndMemType(PetscVec,PetscScalar*[],PetscMemType*)
    PetscErrorCode VecRestoreArrayWriteAndMemType(PetscVec,PetscScalar*[])
    PetscErrorCode VecGetArrayReadAndMemType(PetscVec,const PetscScalar*[],PetscMemType*)
    PetscErrorCode VecRestoreArrayReadAndMemType(PetscVec,const PetscScalar*[])
    PetscErrorCode VecGetArrayAndMemType(PetscVec,PetscScalar*[],PetscMemType*)
    PetscErrorCode VecRestoreArrayAndMemType(PetscVec,PetscScalar*[])

    PetscErrorCode VecEqual(PetscVec,PetscVec,PetscBool*)
    PetscErrorCode VecLoad(PetscVec,PetscViewer)

    PetscErrorCode VecDuplicate(PetscVec,PetscVec*)
    PetscErrorCode VecCopy(PetscVec,PetscVec)
    PetscErrorCode VecChop(PetscVec,PetscReal)

    PetscErrorCode VecDuplicateVecs(PetscVec,PetscInt,PetscVec*[])
    PetscErrorCode VecDestroyVecs(PetscInt,PetscVec*[])

    PetscErrorCode VecGetValues(PetscVec,PetscInt,PetscInt[],PetscScalar[])

    PetscErrorCode VecSetValue(PetscVec,PetscInt,PetscScalar,PetscInsertMode)
    PetscErrorCode VecSetValues(PetscVec,PetscInt,const PetscInt[],const PetscScalar[],PetscInsertMode)
    PetscErrorCode VecSetValuesBlocked(PetscVec,PetscInt,const PetscInt[],const PetscScalar[],PetscInsertMode)

    PetscErrorCode VecSetLocalToGlobalMapping(PetscVec,PetscLGMap)
    PetscErrorCode VecGetLocalToGlobalMapping(PetscVec,PetscLGMap*)
    PetscErrorCode VecSetValueLocal(PetscVec,PetscInt,PetscScalar,PetscInsertMode)
    PetscErrorCode VecSetValuesLocal(PetscVec,PetscInt,const PetscInt[],const PetscScalar[],PetscInsertMode)
    PetscErrorCode VecSetValuesBlockedLocal(PetscVec,PetscInt,const PetscInt[],const PetscScalar[],PetscInsertMode)

    PetscErrorCode VecDot(PetscVec,PetscVec,PetscScalar*)
    PetscErrorCode VecDotBegin(PetscVec,PetscVec,PetscScalar*)
    PetscErrorCode VecDotEnd(PetscVec,PetscVec,PetscScalar*)
    PetscErrorCode VecTDot(PetscVec,PetscVec,PetscScalar*)
    PetscErrorCode VecTDotBegin(PetscVec,PetscVec,PetscScalar*)
    PetscErrorCode VecTDotEnd(PetscVec,PetscVec,PetscScalar*)
    PetscErrorCode VecMDot(PetscVec,PetscInt,PetscVec[],PetscScalar*)
    PetscErrorCode VecMDotBegin(PetscVec,PetscInt,PetscVec[],PetscScalar*)
    PetscErrorCode VecMDotEnd(PetscVec,PetscInt,PetscVec[],PetscScalar*)
    PetscErrorCode VecMTDot(PetscVec,PetscInt,PetscVec[],PetscScalar*)
    PetscErrorCode VecMTDotBegin(PetscVec,PetscInt,PetscVec[],PetscScalar*)
    PetscErrorCode VecMTDotEnd(PetscVec,PetscInt,PetscVec[],PetscScalar*)

    PetscErrorCode VecNorm(PetscVec,PetscNormType,PetscReal*)
    PetscErrorCode VecNormBegin(PetscVec,PetscNormType,PetscReal*)
    PetscErrorCode VecNormEnd(PetscVec,PetscNormType,PetscReal*)

    PetscErrorCode VecAssemblyBegin(PetscVec)
    PetscErrorCode VecAssemblyEnd(PetscVec)

    PetscErrorCode VecZeroEntries(PetscVec)
    PetscErrorCode VecConjugate(PetscVec)
    PetscErrorCode VecNormalize(PetscVec,PetscReal*)
    PetscErrorCode VecSum(PetscVec,PetscScalar*)
    PetscErrorCode VecMax(PetscVec,PetscInt*,PetscReal*)
    PetscErrorCode VecMin(PetscVec,PetscInt*,PetscReal*)
    PetscErrorCode VecScale(PetscVec,PetscScalar)
    PetscErrorCode VecCopy(PetscVec,PetscVec)
    PetscErrorCode VecSetRandom(PetscVec,PetscRandom)
    PetscErrorCode VecSet(PetscVec,PetscScalar)
    PetscErrorCode VecSwap(PetscVec,PetscVec)
    PetscErrorCode VecAXPY(PetscVec,PetscScalar,PetscVec)
    PetscErrorCode VecAXPBY(PetscVec,PetscScalar,PetscScalar,PetscVec)
    PetscErrorCode VecAYPX(PetscVec,PetscScalar,PetscVec)
    PetscErrorCode VecWAXPY(PetscVec,PetscScalar,PetscVec,PetscVec)
    PetscErrorCode VecMAXPY(PetscVec,PetscInt,PetscScalar[],PetscVec[])
    PetscErrorCode VecPointwiseMax(PetscVec,PetscVec,PetscVec)
    PetscErrorCode VecPointwiseMaxAbs(PetscVec,PetscVec,PetscVec)
    PetscErrorCode VecPointwiseMin(PetscVec,PetscVec,PetscVec)
    PetscErrorCode VecPointwiseMult(PetscVec,PetscVec,PetscVec)
    PetscErrorCode VecPointwiseDivide(PetscVec,PetscVec,PetscVec)
    PetscErrorCode VecMaxPointwiseDivide(PetscVec,PetscVec,PetscReal*)
    PetscErrorCode VecShift(PetscVec,PetscScalar)
    PetscErrorCode VecChop(PetscVec,PetscReal)
    PetscErrorCode VecReciprocal(PetscVec)
    PetscErrorCode VecPermute(PetscVec,PetscIS,PetscBool)
    PetscErrorCode VecExp(PetscVec)
    PetscErrorCode VecLog(PetscVec)
    PetscErrorCode VecSqrtAbs(PetscVec)
    PetscErrorCode VecAbs(PetscVec)

    PetscErrorCode VecStrideMin(PetscVec,PetscInt,PetscInt*,PetscReal*)
    PetscErrorCode VecStrideMax(PetscVec,PetscInt,PetscInt*,PetscReal*)
    PetscErrorCode VecStrideScale(PetscVec,PetscInt,PetscScalar)
    PetscErrorCode VecStrideGather(PetscVec,PetscInt,PetscVec,PetscInsertMode)
    PetscErrorCode VecStrideScatter(PetscVec,PetscInt,PetscVec,PetscInsertMode)
    PetscErrorCode VecStrideNorm(PetscVec,PetscInt,PetscNormType,PetscReal*)

    PetscErrorCode VecGhostGetLocalForm(PetscVec,PetscVec*)
    PetscErrorCode VecGhostRestoreLocalForm(PetscVec,PetscVec*)
    PetscErrorCode VecGhostUpdateBegin(PetscVec,PetscInsertMode,PetscScatterMode)
    PetscErrorCode VecGhostUpdateEnd(PetscVec,PetscInsertMode,PetscScatterMode)
    PetscErrorCode VecMPISetGhost(PetscVec,PetscInt,const PetscInt*)

    PetscErrorCode VecGetSubVector(PetscVec,PetscIS,PetscVec*)
    PetscErrorCode VecRestoreSubVector(PetscVec,PetscIS,PetscVec*)

    PetscErrorCode VecNestGetSubVecs(PetscVec,PetscInt*,PetscVec**)
    PetscErrorCode VecNestSetSubVecs(PetscVec,PetscInt,PetscInt*,PetscVec*)

    PetscErrorCode VecISAXPY(PetscVec,PetscIS,PetscScalar,PetscVec)
    PetscErrorCode VecISSet(PetscVec,PetscIS,PetscScalar)

    PetscErrorCode VecCUDAGetArrayRead(PetscVec,const PetscScalar*[])
    PetscErrorCode VecCUDAGetArrayWrite(PetscVec,PetscScalar*[])
    PetscErrorCode VecCUDAGetArray(PetscVec,PetscScalar*[])
    PetscErrorCode VecCUDARestoreArrayRead(PetscVec,const PetscScalar*[])
    PetscErrorCode VecCUDARestoreArrayWrite(PetscVec,PetscScalar*[])
    PetscErrorCode VecCUDARestoreArray(PetscVec,PetscScalar*[])

    PetscErrorCode VecHIPGetArrayRead(PetscVec,const PetscScalar*[])
    PetscErrorCode VecHIPGetArrayWrite(PetscVec,PetscScalar*[])
    PetscErrorCode VecHIPGetArray(PetscVec,PetscScalar*[])
    PetscErrorCode VecHIPRestoreArrayRead(PetscVec,const PetscScalar*[])
    PetscErrorCode VecHIPRestoreArrayWrite(PetscVec,PetscScalar*[])
    PetscErrorCode VecHIPRestoreArray(PetscVec,PetscScalar*[])

    PetscErrorCode VecBindToCPU(PetscVec,PetscBool)
    PetscErrorCode VecBoundToCPU(PetscVec,PetscBool*)
    PetscErrorCode VecGetOffloadMask(PetscVec,PetscOffloadMask*)

    PetscErrorCode VecViennaCLGetCLContext(PetscVec,Py_uintptr_t*)
    PetscErrorCode VecViennaCLGetCLQueue(PetscVec,Py_uintptr_t*)
    PetscErrorCode VecViennaCLGetCLMemRead(PetscVec,Py_uintptr_t*)
    PetscErrorCode VecViennaCLGetCLMemWrite(PetscVec,Py_uintptr_t*)
    PetscErrorCode VecViennaCLRestoreCLMemWrite(PetscVec)
    PetscErrorCode VecViennaCLGetCLMem(PetscVec,Py_uintptr_t*)
    PetscErrorCode VecViennaCLRestoreCLMem(PetscVec)

    PetscErrorCode VecCreateSeqCUDAWithArray(MPI_Comm,PetscInt,PetscInt,const PetscScalar*,PetscVec*)
    PetscErrorCode VecCreateMPICUDAWithArray(MPI_Comm,PetscInt,PetscInt,PetscInt,const PetscScalar*,PetscVec*)
    PetscErrorCode VecCreateSeqHIPWithArray(MPI_Comm,PetscInt,PetscInt,const PetscScalar*,PetscVec*)
    PetscErrorCode VecCreateMPIHIPWithArray(MPI_Comm,PetscInt,PetscInt,PetscInt,const PetscScalar*,PetscVec*)

cdef extern from * nogil: # custom.h
    PetscErrorCode VecStrideSum(PetscVec,PetscInt,PetscScalar*)
    PetscErrorCode VecGetCurrentMemType(PetscVec,PetscMemType*)

# --------------------------------------------------------------------

cdef inline Vec ref_Vec(PetscVec vec):
    cdef Vec ob = <Vec> Vec()
    ob.vec = vec
    PetscINCREF(ob.obj)
    return ob

# --------------------------------------------------------------------
